--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,6 @@
 .header{
     position: relative;
-    max-width: 100%;
+    width: 100%;
     height: 800px;
 }
 
