--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,113 @@
 .main{
     flex: 1 0 auto;
 }
+
+
+
+
+.selecter-items{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    gap: 45px;
+}
+
+
+
+/* Titles */
+
+.title{
+    display: flex;
+    justify-content: space-between;
+}
+.title-box{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-bottom: 70px;
+}
+.lines{
+    position: relative;
+    width: 100px;
+    height: 13px;
+}
+.line-top, .line-botton{
+    position: absolute;
+    height: 2px;
+    background-color: #005BC1;
+}
+.line-top{
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+.line-botton{
+    width: 50%;
+    right: 0;
+    bottom: 0;
+}
+
+
+.title-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 190px;
+    height: 51px;
+    background-color: #005BC1;
+}
+.title-button-body{
+
+}
+
+
+
+
+.cards{
+    display: flex;
+    justify-content: space-between;
+}
+.card{
+    position: relative;
+    width: 350px;
+    height: 300px;
+    border: 3px solid #005BC1;
+}
+.image-product{
+    display: block;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+.card-inside-descriptin{
+    position: absolute;
+    right: 0;
+    bottom: 15px;
+    display: flex;
+    align-items: center;
+    width: 265px;
+    height: 86px;
+    background-color: #005BC1;
+}
+.inside-text{
+    margin-left: 21px;
+}
+.selecter_title{
+    position: relative;
+    display: inline-block;
+}
+.selecter__title__active{
+    color: #005BC1;
+}
+.selecter__title__active::after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    height: 2px;
+    width: 100%;
+    background-color: #005BC1;
+
+}
+
+
