--- a/CSS/settings.css
+++ b/CSS/settings.css
@@ -2,6 +2,7 @@
 @import url("../CSS/pages.css");
 @import url("../CSS/hover.css");
 
+/* Settings Page */
 *{
     margin: 0;
     padding: 0;
@@ -16,13 +17,16 @@ body, html{
 .wrapper{
     display: flex;
     flex-flow: column nowrap;
-    max-width: 1920px;
     min-height: 100%;
-    margin: 0 auto;
 }
 .container{
     width: 1100px;
     margin: 0 auto;
+}
+
+/* Settings Main */
+.section{
+    margin: 150px 0;
 }
 
 /* Diffferent Settings */
@@ -32,12 +36,10 @@ body, html{
     width: 100%;
     height: 100%;
 }
-
 .icon{
     width: 50px;
     height: 50px;
 }
-
 .button{
     display: flex;
     justify-content: center;
